--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,14 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800");
 @import url("https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800");
 
-
+@font-face {
+    font-family: 'BPG Nino Mtavruli';
+    src: url('../fonts/BPGNinoMtavruli-Bold.woff2') format('woff2'),
+        url('../fonts/BPGNinoMtavruli-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
+}
 /*  ---------- BOOTSTRAP FRAMEWORK  ---------- */
 *,
 *::before,
@@ -67,7 +74,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 }
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-family: 'BPG Nino Mtavruli';
 	font-size: 0.875rem;
 	font-weight: 400;
 	line-height: 1.5;
@@ -11267,7 +11274,7 @@ input.parsley-success:focus, textarea.parsley-success:focus {
 /*  ----- 6.3 Global   ----- */
 
 body {
-	font-family: "Roboto", sans-serif;
+	font-family: 'BPG Nino Mtavruli';
 }
 .main-body, .main-dashboard {
 	min-height: 100vh;
